@@ -1,4 +1,7 @@
 This file contains a summary of changes made and why.
+2019Nov20 Several changes to replace f90 code by f77 code(by Ed Himwich):
+          skdrini.f, snap.f, ../skdrut/vmoinp.f, vobinp.f, frinp.f, iwhere_in_string_list_nocase.f
+2019Nov20 Bug fixes in snap.f and in sdrini.f.  Indices of arrays used wrong variables, eg. foo(ic) should be foo(i)
 2019Sep23 proc_disk_tracks.f: If recorder=none do not round up channels recorded to power of 2. 
 2019Aug15-Sep23.  Many changes merging VGOS and S/X branch together. Some bug fixes. About 20 files changed. 
 2018Nov13 proc_disk_tracks.f: Removed checking of BW/samplerate. This will now be handled by the FS. 
